--- a/source/server/CMakeLists.txt
+++ b/source/server/CMakeLists.txt
@@ -20,7 +20,8 @@ set(SOURCE_LIST ${SOURCE_DIR}/main.c
         src/server_config.c
         include/server_config.h
         src/fsm.c
-        include/fsm.h)
+        include/fsm.h
+        include/protocol.h)
 set(HEADER_LIST ""
         src/command_line.c
         include/command_line.h
@@ -29,7 +30,8 @@ set(HEADER_LIST ""
         src/server_config.c
         include/server_config.h
         src/fsm.c
-        include/fsm.h)
+        include/fsm.h
+        include/protocol.h)
 
 add_compile_definitions(_POSIX_C_SOURCE=200809L)
 add_compile_definitions(_XOPEN_SOURCE=700)
