--- a/source/proxy/CMakeLists.txt
+++ b/source/proxy/CMakeLists.txt
@@ -17,14 +17,18 @@ set(SOURCE_LIST ${SOURCE_DIR}/main.c
         src/fsm.c
         include/fsm.h
         src/packet_config.c
-        include/packet_config.h)
+        include/packet_config.h
+        src/proxy_config.c
+        include/proxy_config.h)
 set(HEADER_LIST ""
         src/server_config.c
         include/server_config.h
         src/fsm.c
         include/fsm.h
         src/packet_config.c
-        include/packet_config.h)
+        include/packet_config.h
+        src/proxy_config.c
+        include/proxy_config.h)
 
 add_compile_definitions(_POSIX_C_SOURCE=200809L)
 add_compile_definitions(_XOPEN_SOURCE=700)
