--- a/source/proxy/CMakeLists.txt
+++ b/source/proxy/CMakeLists.txt
@@ -19,7 +19,9 @@ set(SOURCE_LIST ${SOURCE_DIR}/main.c
         src/packet_config.c
         include/packet_config.h
         src/proxy_config.c
-        include/proxy_config.h)
+        include/proxy_config.h
+        src/command_line.c
+        include/command_line.h)
 set(HEADER_LIST ""
         src/server_config.c
         include/server_config.h
@@ -28,7 +30,9 @@ set(HEADER_LIST ""
         src/packet_config.c
         include/packet_config.h
         src/proxy_config.c
-        include/proxy_config.h)
+        include/proxy_config.h
+        src/command_line.c
+        include/command_line.h)
 
 add_compile_definitions(_POSIX_C_SOURCE=200809L)
 add_compile_definitions(_XOPEN_SOURCE=700)
