--- a/source/proxy/CMakeLists.txt
+++ b/source/proxy/CMakeLists.txt
@@ -21,7 +21,9 @@ set(SOURCE_LIST ${SOURCE_DIR}/main.c
         src/proxy_config.c
         include/proxy_config.h
         src/command_line.c
-        include/command_line.h)
+        include/command_line.h
+        src/queue.c
+        include/queue.h)
 set(HEADER_LIST ""
         src/server_config.c
         include/server_config.h
@@ -32,7 +34,9 @@ set(HEADER_LIST ""
         src/proxy_config.c
         include/proxy_config.h
         src/command_line.c
-        include/command_line.h)
+        include/command_line.h
+        src/queue.c
+        include/queue.h)
 
 add_compile_definitions(_POSIX_C_SOURCE=200809L)
 add_compile_definitions(_XOPEN_SOURCE=700)
